Update General.java